<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar is a standard toolbar for use within application content. -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </android.support.design.widget.AppBarLayout>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/et_details_imageButtonActor"
        android:layout_width="151dp"
        android:layout_height="149dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="ACTOR IMAGE"/>

    <TextView
        android:id="@+id/textViewIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="120dp"
        android:text="@string/details_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/et_details_ime"
        android:layout_width="245dp"
        android:layout_height="27dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_details_imageButtonActor"
        app:layout_constraintTop_toBottomOf="@+id/textViewIme" />

    <TextView
        android:id="@+id/textViewPrezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_surname"
        app:layout_constraintStart_toEndOf="@+id/et_details_imageButtonActor"
        app:layout_constraintTop_toBottomOf="@+id/et_details_ime"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/et_details_prezime"
        android:layout_width="248dp"
        android:layout_height="28dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_details_imageButtonActor"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrezime" />

    <TextView
        android:id="@+id/textViewDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:text="@string/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_details_prezime" />

    <TextView
        android:id="@+id/et_details_DOB"
        android:layout_width="236dp"
        android:layout_height="22dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/et_details_ocena"
        app:layout_constraintTop_toBottomOf="@+id/textViewDOB" />

    <TextView
        android:id="@+id/textViewOcena"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/details_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_details_imageButtonActor"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_details_ocena"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/textViewOcena"
        app:layout_constraintTop_toBottomOf="@+id/et_details_prezime" />

    <TextView
        android:id="@+id/textViewBio"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/details_bio"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOcena" />

    <TextView
        android:id="@+id/et_details_bio"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewBio"
        app:layout_constraintTop_toBottomOf="@+id/et_details_ocena" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.design.widget.CoordinatorLayout>

        <ListView
            android:id="@+id/left_drawer_detail"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimaryDark"
            android:choiceMode="singleChoice"
            android:divider="@android:color/white"
            android:dividerHeight="1dp" />

    </android.support.v4.widget.DrawerLayout>

    <LinearLayout
        android:id="@+id/linear_layout_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/drawer_layout_details"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/textViewBio"
        tools:layout_editor_absoluteX="0dp">

        <ListView
            android:id="@+id/lv_filmovi_f_detalji_glumca"
            android:layout_width="match_parent"
            android:layout_height="339dp"
            android:clickable="true"
            android:padding="10dp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</LinearLayout>